--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 # Xcode Project Files
 xcuserdata
 UserInterfaceState.xcuserstate
+chlorine
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dSYM
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
