--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ compiler:
 # Install OpenCL Headers
 before_install:
   - sudo apt-get update -qq
+  - sudo apt-get install -qq fglrx
   - sudo apt-get install -qq opencl-headers
 
 # Restrict to `master`
