--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-# Use the OSX Runtime
-language: objective-c
-before_install:
-  - brew update
-
-# Build Configuration
+# Travis Configuration
+language: cpp
 script: make
 compiler:
   - clang
   - gcc
+
+# Install OpenCL Headers
+before_install:
+  - sudo apt-get update  -qq
+  - sudo apt-get install -qq fglrx
+  - sudo apt-get install -qq opencl-headers
 
 # Restrict to `master`
 branches:
