--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ before_install:
   - sudo apt-get install -qq opencl-headers
 
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.9; fi
-  - if [ "$CXX" = "g++" ]; then ln -s /usr/bin/g++-4.9 /usr/bin/g++; fi
+  - sudo apt-get update  -qq
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then ln -s /usr/bin/g++-4.8 /usr/bin/g++; fi
 
 after_script:
   - $CXX --version
