--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update  -qq
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
-  - if [ "$CXX" = "g++" ]; then ln -s /usr/bin/g++-4.8 /usr/bin/g++; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
 
 after_script:
   - $CXX --version
