--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,16 @@ compiler:
 
 # Install Chlorine Dependencies
 before_install:
-  - sudo apt-get update  -qq
-  - sudo apt-get install -qq fglrx
-  - sudo apt-get install -qq opencl-headers
 
   # Install GCC 4.8.x
   - if [ "$CXX" = "g++" ]; then sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y; fi
+  - sudo apt-get update  -qq
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
 
+  # Install Other Dependencies
+  - sudo apt-get install -qq fglrx
+  - sudo apt-get install -qq opencl-headers
 # Display Compiler Information
 after_script:
   - $CXX --version
