Revert Coveralls Attempt

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,11 @@ before_install:
   # Install Other Dependencies
   - sudo apt-get install -qq fglrx
   - sudo apt-get install -qq opencl-headers
-  - sudo pip install cpp-coveralls
+  # - sudo pip install cpp-coveralls
 
 # Upload Code Coverage Data
-after_success:
-  - coveralls
+# after_success:
+  # - coveralls
 
 # Display Compiler Information
 after_script:
