--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "tests/greatest"]
-	path = tests/greatest
-	url = https://github.com/silentbicycle/greatest.git
+[submodule "tests/googletest"]
+	path = tests/googletest
+	url = https://chromium.googlesource.com/external/googletest.git
