Track Catch Master

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "tests/catch"]
-	path = tests/catch
-	url = https://github.com/philsquared/Catch.git
+    path = tests/catch
+    url = https://github.com/philsquared/Catch.git
+    branch = master
