--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # Travis Configuration
 # sudo: false
 language: cpp
+os:
+  - osx
 compiler:
   - clang
   - gcc
@@ -28,23 +30,10 @@ compiler:
 # Delete This on Container Integration #
 ########################################
 
-# Install GCC 4.8.x
-before_install:
-  - if [ "$CXX" = "g++" ]; then sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y; fi
-  - if [ "$CXX" = "g++" ]; then sudo apt-get update -qq; fi
-  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8" GCOV="gcov-4.8"; fi
-
-# Install Chlorine Dependencies
 install:
-  - sudo apt-get update  -qq
-  - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1
-  - sudo apt-get install -qq opencl-headers
-  - sudo pip install cpp-coveralls
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         wget http://www.cmake.org/files/v3.3/cmake-3.3.0-Linux-i386.tar.gz
-      && tar -xzf cmake-3.3.0-Linux-i386.tar.gz
-      && sudo cp -fR cmake-3.3.0-Linux-i386/* /usr
+  - if [ "$CXX" = "g++" ]; then export CXX=g++-4.8; fi
+  - brew install cmake
+  - pip install cpp-coveralls
 
 ########################################
 
