Reorder Coverage Flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,6 @@ else()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -std=c++1y")
 endif()
 
-if(DEFINED ENV{COVERAGE}) # Used for Travis-CI Builds
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
-endif()
-
 find_package(OpenCL REQUIRED)
 include_directories(chlorine/include ${OpenCL_INCLUDE_DIR})
 file(GLOB PROJECT_HEADERS chlorine/include/*.hpp)
@@ -30,6 +26,11 @@ target_link_libraries(chlorine ${OpenCL_LIBRARY})
 # Build the clinfo Helper
 add_executable(clinfo chlorine/include/cl.hpp chlorine/clinfo/clinfo.cpp)
 target_link_libraries(clinfo ${OpenCL_LIBRARY})
+
+# Enable Coverage on Travis Tests
+if(DEFINED ENV{TRAVIS})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
+endif()
 
 # Build the Test Suite
 include_directories(tests tests/catch/include)
