--- a/.travis.yml
+++ b/.travis.yml
@@ -6,40 +6,13 @@ compiler:
   - clang
   - gcc
 
-env:
-  global:
-    - COVERAGE=true
-#####################################
-# For Migration to Container Builds #
-#####################################
-
-# Install Container Dependencies
-# addons:
-#   apt:
-#     sources:
-#       - ubuntu-toolchain-r-test
-#     packages:
-#       - fglrx-dev # (TravisCI: #4228, apt-package-whitelist: #383)
-#       - g++-4.8
-#       - opencl-headers
-
-# Install Coveralls (TravisCI: #3563)
-# before_script:
-#   - export PATH=$HOME/.local/bin:$PATH
-#   - pip install cpp-coveralls --user `whoami`
-
-########################################
-# Delete This on Container Integration #
-########################################
-
+# Install Dependencies
 before_script:
   - if [ "$CXX" = "g++" ]; then export CXX=g++-4.8; fi
   - brew update
   - brew outdated cmake || brew upgrade cmake
   - brew install python
   - pip install cpp-coveralls
-
-########################################
 
 # Run the Test Script
 script:
@@ -53,7 +26,7 @@ script:
 
 # Upload Code Coverage Data
 after_success:
-  - coveralls --root .. --exclude chlorine/include/cl.hpp  --exclude chlorine/clinfo/clinfo.cpp --exclude build/CMakeFiles/ --exclude examples --exclude tests
+  - coveralls --root .. --exclude chlorine/include/cl.hpp  --exclude chlorine/clinfo/clinfo.cpp --exclude examples --exclude tests
 
 # Display Compiler Information
 after_script:
